# slidePenPro

./: .gitignore  README.md  custom_plan.md  index.html  package-lock.json  package.json  ppt_screenshare_troubleshooting.md  slidepro_implementation_plan.md  tailwind.config.js  vite.config.ts
functions/: index.js  package-lock.json  package.json
src/: App.tsx  firebase.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CreditPurchaseModal.tsx  DrawingCanvas.tsx  FloatingToolbar.tsx  InteractiveEffects.tsx  LoginModal.tsx  PdfPresenter.tsx  ScreenSharePresenter.tsx  ShortcutHUD.tsx
