[package]
name = "slidepro"
version = "0.1.0"
description = "SlidePro - Next Gen Presentation Drawing Companion"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "winnt", "libloaderapi"] }

[features]
# default to custom protocol for production builds
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
